# Interest-Rates

./: README.md  pyproject.toml  requirements.txt
examples/: run_api.py
interest_rate_meta_model/: cache.py  curves.py  dashboard_service.py  data_sources.py  models.py
interest_rate_meta_model/static/: app.js  styles.css
interest_rate_meta_model/templates/: index.html
site/: index.html
site/data/: models.json  ref_rates.json  status.json  treasury_par_history.json
site/py/: browser_engine.py  manifest.json
site/py/interest_rate_meta_model/: __init__.py  api.py  meta.py
site/py/interest_rate_meta_model/static/: app.js  styles.css
site/py/interest_rate_meta_model/templates/: index.html
site/static/: app.js
tests/: test_api.py  test_cache.py  test_pages_browser_engine.py  test_validate_pages_data.py
tools/: prefetch_pages_data.py  validate_pages_data.py
workflows/: README_UPLOAD.md  deploy_pages.yml  prefetch_pages_data.yml
